5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1638_651.log
== TEST (2019-04-08 19:42:07) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == M):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( sex.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:42:34) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == M):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( sex.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:42:35) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == M):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- EXECUTION TIME:
0.149242
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/651/main.py", line 4, in <module>
    if( sex.upper() == M):
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:42:36) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == M):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( sex.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:42:57) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == "M"):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:43:06) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == "M"):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:43:25) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == "M"):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:43:57) 
-- CODE:
alt = float(input("Qual sua altura:"))
sex = input("Qual seu sexo:")

if( sex.upper() == "M"):
	imc = (72.7 * alt) - 58
else:
	imc = (62.1 * alt) - 44.7

print(round(imc, 2))	
-- EXECUTION TIME:
0.213467
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
